ie z-index fix

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@
     margin: auto;
     height: 100%;
     background: rgba(0,0,0,0.5);
+    z-index: 2;
 }
 .preview img
 {
